--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "author": {
-    "email": "gajus@gajus.com",
-    "name": "Gajus Kuizinas",
-    "url": "http://gajus.com"
+    "email": "sandiyarov@gmail.com",
+    "name": "Alex Sandiiarov"
   },
   "bin": "./dist/bin/create-index.js",
   "dependencies": {
@@ -38,10 +37,10 @@
   ],
   "license": "BSD-3-Clause",
   "main": "./dist/index.js",
-  "name": "create-index",
+  "name": "create-index-js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gajus/create-index"
+    "url": "https://github.com/sandiiarov/create-index"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production babel --source-maps --copy-files ./src --out-dir ./dist",
